--- a/frontend/src/components/LocalizationText.css
+++ b/frontend/src/components/LocalizationText.css
@@ -1,32 +1,36 @@
 .place-wrapper {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
     justify-content: center;
     align-items: flex-start;
     text-align: center;
-    box-sizing: border-box;
-    margin-top: 60px;
-   
 }
 
 .city {
     margin: 0px;
-    font-size: 5rem;
-    text-shadow: 2px 2px 6px #000;
+    font-size: 6rem;
+    text-shadow: 2px 2px 5px #000;
+    text-align: start;
+    font-family: 'VictorMono-Regular';
 }
 
 .state {
     margin: 0px;
-    font-size: 2.3rem;
-    padding-left: 200px;
-    text-shadow: 1px 1px #000;
+    width: 100%;
+    font-size: 2.4rem;
+    text-align: end;
+    padding-right: 20px;
+    box-sizing: border-box;
+    text-shadow: 1px 1px 4px #000;
+    font-family: 'VictorMono-Regular';
 }
 
 .country {
     margin: 0px;
+    width: 100%;
     font-size: 1.3rem;
-    padding-left: 210px;
+    text-align: end;
+    padding-right: 20px;
+    box-sizing: border-box;
     text-shadow: 1px 1px #000;
 }
